@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-32
+2015-05-21 Mikhail S. Dubrovin	
+- NDArrIOV1 - improve messages (PSAS-148)
+
 Tag: V00-05-31
 2015-05-18 Mikhail S. Dubrovin	
 - NDArrIOV1.h - improve memory management in destructor (PSAS-148)
